feat: adicionados testes, validação de token e documentação da api
