# routes/api.php
@@ -2,10 +2,11 @@
 
 use App\Http\Controllers\OrderController;
 use Illuminate\Support\Facades\Route;
+use App\Http\Middleware\JwtMiddleware;
 
-Route::prefix('orders')->group(function () {
+Route::prefix('order')->group(function () {
     Route::get('/', [OrderController::class, 'index']);
     Route::get('/{id}', [OrderController::class, 'show']);
     Route::post('/', [OrderController::class, 'store']);
     Route::patch('/{id}', [OrderController::class, 'updateStatus']);
-});
+})->middleware(JwtMiddleware::class);
